--- a/service-java/src/main/resources/application.properties
+++ b/service-java/src/main/resources/application.properties
@@ -17,3 +17,11 @@ logging.level.org.choreo.demo.luxury.hotels=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.security.oauth2.client.registration.notificationApi.client-id=${NOTIFICATION_API_CLIENT_ID}
+spring.security.oauth2.client.registration.notificationApi.client-secret=${NOTIFICATION_API_CLIENT_SECRET}
+spring.security.oauth2.client.registration.notificationApi.authorization-grant-type=client_credentials
+spring.security.oauth2.client.provider.notificationApi.token-uri=${NOTIFICATION_API_TOKEN_URL}
+
+notificationApi.endpoint=${NOTIFICATION_API_ENDPOINT}
