introduce health checks

--- a/service-java/src/main/resources/application.properties
+++ b/service-java/src/main/resources/application.properties
@@ -18,6 +18,9 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.properties.hibernate.format_sql=true
 
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.health.db.enabled=true
 
 spring.security.oauth2.client.registration.notificationApi.client-id=${NOTIFICATION_API_CLIENT_ID}
 spring.security.oauth2.client.registration.notificationApi.client-secret=${NOTIFICATION_API_CLIENT_SECRET}
