--- a/service-java/pom.xml
+++ b/service-java/pom.xml
@@ -68,7 +68,10 @@
 			<version>4.1.107.Final</version> <!-- Use the version compatible with your Netty version -->
 			<classifier>osx-x86_64</classifier>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
